--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -4,9 +4,11 @@ on:
   push:
     branch:
       - "**" # This will run on all branches, and must be quoted to be handled by yaml
+    schedule:
+      - cron: '0 0 * * 6' #This will run at 0:00 on Saturday: https://crontab.guru
 
 jobs:
-
+#runs-on will need to be modified to an on-prem server, windows or linux
   build_and_test:
     runs-on: ubuntu-latest
 
